# Llvm.NET

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .nojekyll  Build-All.ps1  Build-Docs.ps1  Build-DotNet.ps1  Build-Interop.ps1  Build-LibLlvm.ps1  Build-Llvm.ps1  Build-Native.ps1  Build-Source.ps1  Build-Xplat.ps1  Build-docs.ps1  BuildAll.proj  BuildAll.ps1  BuildAll.slnproj  BuildEnv.props  BuildVersion.msbuildproj  BuildVersion.proj  BuildVersion.xml  CMake-Helpers.ps1  CODE_OF_CONDUCT.md  Commit-Docs.ps1  Compress-Binaries.ps1  Directory.Build.props  Directory.Build.targets  Directory.Packages.props  EnlistmentBuildVersion.targets  EnlistmentInfo.props  GEVERNANCE.md  GOVERNANCE.md  Generate-HandleWrappers.ps1  IgnoredWords.dic  InitAndUpdateSubmodules.ps1  InlineBuildTasks.targets  Invoke-Tests.ps1  Invoke-UnitTests.ps1  LICENSE.md  (+41 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-build.yml  pr-build.yml  pr-build.yml.broken  release-build.yml  test-results.yml
Analyzers/: index.html
BuildExtensions/: CommonVersion.csproj  EnlistmentBuildVersion.targets  InlineBuildTasks.targets  Llvm.NET.BuildTasks.sln  SolutionProj.Common.props  SolutionProj.Common.targets
BuildExtensions/Llvm.NET.BuildTasks/: BuildVersionData.cs  DownloadFile.cs  GenerateSha256File.cs  GetRepositoryVersionInfo.cs  Llvm.NET.BuildTasks.csproj  Llvm.NET.BuildTasks.sln  RepositoryExtensions.cs  Validators.cs
CommandLine/: index.html  toc.html  toc.json
CommandLine/api/: Ubiquity.NET.CommandLine.AppControlledDefaultsRootCommand.-ctor.html  Ubiquity.NET.CommandLine.AppControlledDefaultsRootCommand.html  Ubiquity.NET.CommandLine.ArgsParsing.InvokeDefaultOptions.html  Ubiquity.NET.CommandLine.ArgsParsing.html  (+121 more)
OneFlow/: Finish-Feature.ps1  Publish-Release.ps1  ReadMe.md  Start-Release.ps1
Samples/: Samples.sln
SrcGeneration/: index.html  toc.html  toc.json
TextUX/: index.html  toc.html  toc.json
antlr-utils/: index.html  toc.html  toc.json
api/: Llvm.NET.BitcodeModule.-ctor.html  Llvm.NET.BitcodeModule.AddAlias.html  Llvm.NET.BitcodeModule.AddFunction.html  Llvm.NET.BitcodeModule.AddGlobal.html  Llvm.NET.BitcodeModule.AddGlobalInAddressSpace.html  Llvm.NET.BitcodeModule.AddModuleFlag.html  Llvm.NET.BitcodeModule.AddNamedMetadataOperand.html  Llvm.NET.BitcodeModule.AddVersionIdentMetadata.html  Llvm.NET.BitcodeModule.Aliases.html  Llvm.NET.BitcodeModule.AppendInlineAsm.html  Llvm.NET.BitcodeModule.Clone.html  Llvm.NET.BitcodeModule.Comdats.html  Llvm.NET.BitcodeModule.Context.html  Llvm.NET.BitcodeModule.CreateFunction.html  Llvm.NET.BitcodeModule.CreateMDNode.html  Llvm.NET.BitcodeModule.DIBuilder.html  Llvm.NET.BitcodeModule.DICompileUnit.html  Llvm.NET.BitcodeModule.DataLayoutString.html  Llvm.NET.BitcodeModule.DebugMetadataVersion.html  Llvm.NET.BitcodeModule.DebugVersionValue.html  Llvm.NET.BitcodeModule.Dispose.html  Llvm.NET.BitcodeModule.DwarfVersionValue.html  Llvm.NET.BitcodeModule.Finalize.html  Llvm.NET.BitcodeModule.Functions.html  Llvm.NET.BitcodeModule.GetAlias.html  Llvm.NET.BitcodeModule.GetFunction.html  Llvm.NET.BitcodeModule.GetIntrinsicDeclaration.html  Llvm.NET.BitcodeModule.GetNamedGlobal.html  Llvm.NET.BitcodeModule.GetTypeByName.html  Llvm.NET.BitcodeModule.Globals.html  Llvm.NET.BitcodeModule.IsDisposed.html  Llvm.NET.BitcodeModule.IsShared.html  Llvm.NET.BitcodeModule.Layout.html  Llvm.NET.BitcodeModule.Link.html  Llvm.NET.BitcodeModule.Llvm-NET-IExtensiblePropertyContainer-AddExtendedPropertyValue.html  Llvm.NET.BitcodeModule.Llvm-NET-IExtensiblePropertyContainer-TryGetExtendedPropertyValue.html  Llvm.NET.BitcodeModule.LoadFrom.html  Llvm.NET.BitcodeModule.MakeShared.html  Llvm.NET.BitcodeModule.ModuleFlags.html  Llvm.NET.BitcodeModule.ModuleInlineAsm.html  (+5116 more)
articles/: ReleaseNotes.html  index.html  toc.html
current/: ReleaseNotes.html  index.html  manifest.json  xrefmap.yml
docfx/: .gitignore  Build-Docs.ps1  Llvm.Net.Docfx.csproj  Llvm.Net.Docfx.sln  ReadMe.md  ReleaseNotes.md  Ubiquity.NET.Llvm.Docfx.csproj  Ubiquity.NET.Llvm.Docfx.sln  docfx.json  documentation.msbuildproj  index.md  llvm-xref.yml  toc.yml  versions-xref.yml
docs/: index.html  manifest.json  toc.html  xrefmap.yml
extensions/: index.html  toc.html  toc.json
interop-helpers/: index.html  toc.html  toc.json
llvm/: Llvm-Libs.props  Llvm-Libs.targets  ReleaseNotes.html  index.html  toc.html  toc.json
public/: main.css
runtime-utils/: index.html  toc.html  toc.json
src/: CustomDictionary.xml  Design.md  LibLlvm.sln  Llvm.NET.sln  Llvm.NET.sln.DotSettings  Llvm.NETTests.testsettings  PackageReadme.md  Push-Nuget.ps1  ReadMe.md  Ubiquity.NET.Llvm.sln  Ubiquity.NET.Llvm.sln-old  Ubiquity.NET.Llvm.slnx  nuget.config  settings.VisualStudio.json  stylecop.json  win32.runsettings  x64.runsettings
src/Interop/LibLLVM/: .gitignore  AnalysisBindings.cpp  AttributeBindings.cpp  CMakeLists.txt  ContextBindings.cpp  DIBuilderBindings.cpp  DataLayoutBindings.cpp  EXPORTS.DEF  EXPORTS.g.DEF  IRBindings.cpp  InlinedExports.cpp  LegacyPassManagerOpt.cpp  LibLLVM.sln  LibLLVM.vcxproj  LibLLVM.vcxproj.filters  LibLlvmOrcJitBindings.cpp  LlvmApplication.props  MetadataBindings.cpp  ModuleBindings.cpp  NuGet.config  ObjectFileBindings.cpp  OrcJITv2Bindings.cpp  PassBuilderOptionsBindings.cpp  PassManagerBindings.cpp  RCa03632  Resource.rc  TripleBindings.cpp  ValueBindings.cpp  cpp.hint  packages.config
src/Interop/LibLLVM/NugetPkg/: LibLLVM.NET.nuspec
src/Interop/LibLLVM/NugetPkg/buildMultiTargeting/: LibLlvm.NET.props
src/Interop/LibLLVM/include/: InlinedExports.h  ReadMe.md  ValueCache.h
src/Interop/LibLLVM/include/libllvm-c/: AnalysisBindings.h  AttributeBindings.h  ContextBindings.h  DIBuilderBindings.h  DataLayoutBindings.h  IRBindings.h  LibLlvmOrcJitBindings.h  MetadataBindings.h  ModuleBindings.h  ObjectFileBindings.h  OrcJITv2Bindings.h  PassBuilderOptionsBindings.h  PassManagerBindings.h  TripleBindings.h  ValueBindings.h
styles/: main.css  main.js
v10.0.0/: ReleaseNotes.html  index.html  manifest.json  toc.json
v8.0.1/: xrefmap.yml
(+11296 files in other folders)
